--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class="row">
         <div class="col-xs-12 col-md-12" id="navbar">
           <nav class="navbar navbar-default">
-            <div class="container-fluid">
+
               <!-- Brand and toggle get grouped for better mobile display -->
               <div class="navbar-header">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
@@ -68,7 +68,7 @@
                   </li>
                 </ul>
               </div><!-- /.navbar-collapse -->
-            </div><!-- /.container-fluid -->
+
           </nav>
         </div>
       </div>
@@ -76,14 +76,12 @@
 <!-- NAVBAR ENDS  -->
 
 <!--JUMBOTRON BEGINS  -->
-<img src="C:\Users\Amy\Desktop\Projects\FinalProject\images\pexels-umbrellaphoto-large.jpg">
 
 <div class="container-fluid">
   <div class="row">
     <div class="col-xs-12 col-md-12">
-      <div class="jumbotron">
-
-        <h1>Raining Ideas</h1>
+      <div class="jumbotron ovo-font-white">
+          <h1>Raining Ideas</h1>
           <p>Web Developer Portfolio</p>
             <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
       </div>
