--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/main.css">
-    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=IM+Fell+Great+Primer+SC|Kite+One|Ovo|Suranna" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
 
     <title>FinalProject</title>
   </head>
@@ -21,40 +21,37 @@
 
               <!-- Brand and toggle get grouped for better mobile display -->
               <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                <!-- <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
                   <span class="sr-only">Toggle navigation</span>
                   <span class="icon-bar"></span>
                   <span class="icon-bar"></span>
                   <span class="icon-bar"></span>
                 </button>
-                <!-- <a class="navbar-brand" href="#">Brand</a> -->
+                <a class="navbar-brand" href="#">Brand</a> -->
               </div>
 
               <!-- Collect the nav links, forms, and other content for toggling -->
               <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
-                  <!-- <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li> -->
-                  <!-- <li><a href="#">Link</a></li> -->
+                  <!-- <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
+                  <li><a href="#">Link</a></li> -->
                   <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">RESUME<span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                      <li><a href="https://gabby26.github.io/Day2-Bootstrap-Practice/">First Bootstrap</a></li>
-                      <li><a href="#">Another action</a></li>
-                      <li><a href="#">Something else here</a></li>
-                      <li role="separator" class="divider"></li>
-                      <li><a href="#">Separated link</a></li>
-                      <li role="separator" class="divider"></li>
-                      <li><a href="#">One more separated link</a></li>
+                      <li><a href="resume.html">Resume</a></li>
+                      <li><a href="https://gabby26.github.io/Day2-Bootstrap-Practice/">First Bootstrap Wireframe</a></li>
+                      <!-- <li><a href="#">another link</a></li>
+                      <li role="separator" class="divider"></li> -->
                     </ul>
                   </li>
                 </ul>
-                <form class="navbar-form navbar-left">
+                <!-- <form class="navbar-form navbar-left">
                   <div class="form-group">
                     <input type="text" class="form-control" placeholder="Search">
                   </div>
                   <button type="submit" class="btn btn-default">Submit</button>
-                </form>
-                <ul class="nav navbar-nav navbar-right">
+                </form> -->
+                <!-- <ul class="nav navbar-nav navbar-right">
                   <li><a href="#">Link</a></li>
                   <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
@@ -66,7 +63,7 @@
                       <li><a href="#">Separated link</a></li>
                     </ul>
                   </li>
-                </ul>
+                </ul> -->
               </div><!-- /.navbar-collapse -->
 
           </nav>
@@ -75,28 +72,71 @@
     </div>
 <!-- NAVBAR ENDS  -->
 
-<!--JUMBOTRON BEGINS  -->
+<!--CAROUSEL BEGINS  -->
 
 <div class="container-fluid">
   <div class="row">
     <div class="col-xs-12 col-md-12">
-      <div class="jumbotron ovo-font-white">
-          <h1>Raining Ideas</h1>
-          <p>Web Developer Portfolio</p>
-            <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
+      <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+        <!-- Indicators -->
+        <ol class="carousel-indicators">
+          <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+          <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+          <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+        </ol>
+
+        <!-- Wrapper for slides -->
+        <div class="carousel-inner" role="listbox">
+          <div class="item active" id="welcome-image">
+            <div class="carousel-caption ovo-font-white carousel-font">
+              <p>Brainstorm Productions</p>
+                <h3>Click any title to see the website</h3>
+
+            </div>
+          </div>
+          <div class="item" id="travel-site">
+            <div class="carousel-caption ovo-font-white carousel-font">
+              <a href="#">Travel Site</a>
+            </div>
+          </div>
+
+          <div class="item" id="cello-site">
+            <div class="carousel-caption ovo-font-white carousel-font">
+              <a href="#">Bootcamp 1 Project</a>
+            </div>
+          </div>
+
+        </div>
+
+        <!-- Controls -->
+        <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+          <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+          <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
       </div>
+
+
     </div>
   </div>
 </div>
 
-<!-- JUMBOTRON ENDS -->
+<!-- CAROUSEL ENDS -->
 
 <!--FOOTER BEGINS  -->
 <div class="container-fluid">
   <div class="row" id="footer">
     <div class="col-xs-4 col-md-4" id="icon">
-      <i class="fa fa-facebook-square" aria-hidden="true" id="Facebook">
-      </i>
+    <a href="https://www.facebook.com/agabbert1">
+      <i class="fa fa-facebook-square" aria-hidden="true"></i>
+    </a>
+    <a href="https://www.linkedin.com/in/amy-gabbert-6b513a34?authType=NAME_SEARCH&authToken=IFNr">
+      <i class="fa fa-linkedin" aria-hidden="true"></i>
+    </a>
+
     </div>
     <div class="col-xs-4 col-md-4" id="contact">
       Contact Form
@@ -109,7 +149,8 @@
           </form>
       </div>
     <div class="col-xs-4 col-md-4" id="map">
-      Map
+      <p>Local Map</p>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d204504.28567646892!2d-119.93464599857552!3d36.78545132148885!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80945de1549e4e9d%3A0x7b12406449a3b811!2sFresno%2C+CA!5e0!3m2!1sen!2sus!4v1477016491180" width="275" height="125" frameborder="0" style="border:0" allowfullscreen></iframe>
     </div>
   </div>
 </div>
