--- a/index.html
+++ b/index.html
@@ -102,7 +102,8 @@
 
           <div class="item" id="cello-site">
             <div class="carousel-caption ovo-font-white carousel-font">
-              <a href="#">Bootcamp 1 Project</a>
+              <a href="https://gabby26.github.io/cello-soul/">Cello Soul</a>
+              <h3>Bootcamp 1 Project<h3>
             </div>
           </div>
 
