--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <div class="carousel-inner" role="listbox">
           <div class="item active" id="welcome-image">
             <div class="carousel-caption ovo-font-white carousel-font">
-              <p>Brainstorm Productions</p>
+              <p>Brainstorm Productions</p> <!--New Name-->
                 <h3>Click any title to see the website</h3>
 
             </div>
