added restaurante site

--- a/index.html
+++ b/index.html
@@ -106,6 +106,20 @@
               <h3>Bootcamp 1 Project<h3>
             </div>
           </div>
+          <div class="item" id="restaurante">
+            <div class="carousel-caption ovo-font-white carousel-font">
+              <a href="https://gabby26.github.io/restaurante-site-mine/">Restaurante</a>
+              <h3>Bootcamp 2 Class Project<h3>
+            </div>
+          </div>
+          <div class="item" id="pet-store">
+            <div class="carousel-caption ovo-font-white carousel-font">
+              <a href="#">Pet Store</a>
+              <h3>Bootcamp 2 Class Project<h3>
+            </div>
+          </div>
+
+
 
         </div>
 
