responsive features added

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
           </div>
           <div class="item" id="restaurante">
             <div class="carousel-caption ovo-font-white carousel-font">
-              <a href="https://gabby26.github.io/restaurante-site-mine/">Restaurante</a>
+              <a href="">Restaurante</a>
               <h3>Bootcamp 2 Class Project<h3>
             </div>
           </div>
@@ -144,7 +144,7 @@
 <!--FOOTER BEGINS  -->
 <div class="container-fluid">
   <div class="row" id="footer">
-    <div class="col-xs-4 col-md-4" id="icon">
+    <div class="col-xs-12 col-md-4" id="icon">
     <a href="https://www.facebook.com/agabbert1">
       <i class="fa fa-facebook-square" aria-hidden="true"></i>
     </a>
@@ -153,7 +153,7 @@
     </a>
 
     </div>
-    <div class="col-xs-4 col-md-4" id="contact">
+    <div class="col-xs-12 col-md-4 contact-form" id="contact">
       Contact Form
           <form>
             <div class="form-group">
@@ -163,9 +163,9 @@
             <button type="submit" class="btn btn-default">Submit</button>
           </form>
       </div>
-    <div class="col-xs-4 col-md-4" id="map">
+    <div class="col-xs-12 col-md-4" id="map">
       <p>Local Map</p>
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d204504.28567646892!2d-119.93464599857552!3d36.78545132148885!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80945de1549e4e9d%3A0x7b12406449a3b811!2sFresno%2C+CA!5e0!3m2!1sen!2sus!4v1477016491180" width="275" height="125" frameborder="0" style="border:0" allowfullscreen></iframe>
+      <iframe class="map-iframe" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d204504.28567646892!2d-119.93464599857552!3d36.78545132148885!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80945de1549e4e9d%3A0x7b12406449a3b811!2sFresno%2C+CA!5e0!3m2!1sen!2sus!4v1477016491180" width="275" height="125" frameborder="0" style="border:0" allowfullscreen></iframe>
     </div>
   </div>
 </div>
