Changes to font-size

--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
         <div class="carousel-inner" role="listbox">
           <div class="item active" id="welcome-image">
             <div class="carousel-caption ovo-font-white carousel-font">
-              <p>Brainstorm Productions</p> <!--New Name-->
-                <h3>Click any title to see the website</h3>
+              <p class="carousel-main-title">Brainstorm Productions</p>
+                <h3 class="carousel-subtitle">Click any title to see the website</h3>
 
             </div>
           </div>
