added Travel Site and Restaurante links

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
           </div>
           <div class="item" id="travel-site">
             <div class="carousel-caption ovo-font-white carousel-font">
-              <a href="#">Travel Site</a>
+              <a href="https://gabby26.github.io/Travel-agency/">Travel Site</a>
             </div>
           </div>
 
@@ -108,7 +108,7 @@
           </div>
           <div class="item" id="restaurante">
             <div class="carousel-caption ovo-font-white carousel-font">
-              <a href="">Restaurante</a>
+              <a href="https://gabby26.github.io/restaurante-site-mine/">Restaurante</a>
               <h3>Bootcamp 2 Class Project<h3>
             </div>
           </div>
