Commented out Pet store for now

--- a/index.html
+++ b/index.html
@@ -112,12 +112,12 @@
               <h3>Bootcamp 2 Class Project<h3>
             </div>
           </div>
-          <div class="item" id="pet-store">
+          <!-- <div class="item" id="pet-store">
             <div class="carousel-caption ovo-font-white carousel-font">
               <a href="#">Pet Store</a>
               <h3>Bootcamp 2 Class Project<h3>
             </div>
-          </div>
+          </div> -->
 
 
 
